ingresses/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"certmanager.k8s.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-body-size":"5Gi"},"labels":{"app":"docker-registry"},"name":"registry","namespace":"default"},"spec":{"rules":[{"host":"registry.morosys.de","http":{"paths":[{"backend":{"serviceName":"private-registry-docker-registry","servicePort":5000},"path":"/"}]}}],"tls":[{"hosts":["registry.moros [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  generation: 1
  labels:
    app: jenkins
  managedFields:
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    time: 2020-05-03T19:56:27Z
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:certmanager.k8s.io/cluster-issuer: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
          f:nginx.ingress.kubernetes.io/proxy-body-size: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:rules: {}
        f:tls: {}
    manager: kubectl
    operation: Update
    time: 2020-05-03T20:36:59Z
  name: jenkins
  namespace: default
spec:
  rules:
  - host: jenkins.morosys.de
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - jenkins.morosys.de
    secretName: jenkins.morosys.de-cert
status:
  loadBalancer:
    ingress:
    - ip: 116.203.45.6
    - ip: 116.203.45.83
